<resources>
    <string name="app_name">SchoolsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_school_list">Lista de colegios</string>
    <string name="warning_no_internet">No se pudieron cargar los datos. Comprueba tu conexión a internet. Pulsa la pantalla para reintentar</string>
    <string name="warning_no_schools_yet">No hay colegios todavía. Pulsa en + para añadir.</string>
    <string name="warning_no_teachers_yet">No hay profesores todavía. Pulsa + para añadir.</string>
    <string name="title_teacher_list">Profesores de</string>
    <string name="progress_loading">Cargando...</string>
    <string name="progress_loading_schools">Estamos cargando los colegios</string>
    <string name="progress_loading_teachers">Estamos cargando los profesores</string>
    <string name="hint_school_name">Nombre del colegio</string>
    <string name="hint_school_address">Dirección</string>
    <string name="hint_school_city">Ciudad</string>
    <string name="hint_phone">Teléfono</string>
    <string name="bt_edit_school">Guardar cambios</string>
    <string name="title_add_school">Añadir colegio</string>
    <string name="bt_add_school">Añadir</string>
    <string name="error_empty_field">Campo vacío</string>
    <string name="warning_school_not_added">No se pudo añadir el colegio</string>
    <string name="message_school_added_successfully">Colegio añadido correctamente</string>
    <string name="message_school_updated_successfully">Colegio actualizado correctamente</string>
    <string name="warning_school_not_updated">No se pudo actualizar el colegio</string>
    <string name="message_school_deleted_successfully">Colegio eliminado correctamente</string>
    <string name="warning_school_not_deleted">No se pudo borrar el colegio</string>
    <string name="hint_teacher_name">Nombre del profesor</string>
    <string name="hint_DNI">DNI</string>
    <string name="hint_surname">Apellidos</string>
    <string name="hint_wage">Salario</string>
    <string name="title_add_teacher">Añadir profesor</string>
    <string name="message_teacher_added_successfully">Profesor añadido correctamente</string>
    <string name="warning_teacher_not_added">No se pudo añadir el profesor</string>
    <string name="message_teacher_updated_successfully">Profesor actualizado correctamente</string>
    <string name="warning_teacher_not_updated">No se pudo actualizar el profesor</string>
    <string name="message_teacher_deleted_successfully">Profesor borrado correctamente</string>
    <string name="warning_teacher_not_deleted">No se pudo borrar el profesor</string>
    <string name="bt_select_image">Seleccionar imagen</string>
    <string name="bt_edit">Guardar cambios</string>
    <string name="string_view_teachers">Ver profesores</string>
    <!-- Strings related to loginRegister -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bt_login">Iniciar sesión</string>
    <string name="bt_register">Registro</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_confirm_password">Repite contraseña</string>
    <string name="warning_login_failed">Fallo al iniciar sesión. Comprueba los datos.</string>
    <string name="greeting_user">"Bienvenido, "</string>
    <string name="message_user_registered">Registro completado. Inicia sesión ahora</string>
    <string name="warning_user_not_registered">No se pudo completar el registro. Comprueba los datos</string>
</resources>